...
    <string name="remove_from_history">Remove from History</string>
    <string name="remove_from_recents">Remove from Recents</string>
    <string name="note_and_tags">Note &amp; tags</string>
    <string name="starred_snack">Starred. It\'ll be in History when you want it.</string>
    <string name="unstarred_snack">Star removed</string>
    <string name="history_removed_snack">Removed from History</string>
    <string name="recents_removed_snack">Removed from Recents</string>
    <string name="undo">Undo</string>
    <string name="history_empty_title">History is quiet so far</string>
    <string name="history_empty_body">Posts you open will show up here.</string>
    <string name="starred_empty_title">No stars yet</string>
    <string name="starred_empty_body">Tap the star on a post to keep it close.</string>
    <string name="search_empty_title">Nothing matches that</string>
    <string name="search_empty_body">Try fewer words or clear a filter.</string>
...
